--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="libs/MaterialDesign/css/materialdesignicons.css">
     <link rel="stylesheet" href="libs/sweetalert2/dist/sweetalert2.css">
     <link rel="stylesheet" href="libs/DataTables/datatables.css">
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="shortcut icon" href="img/icon128.png">
     <title>appAulaDS</title>
 </head>
 
