--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="shortcut icon" href="img/icon128.png">
     <title>appAulaDS</title>
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('sw.js').then(function() {
+                console.log('Service worker registrado com sucesso!')
+            }).catch(function() {
+                console.log('Registro do service worker não realizado!')
+            })
+        }
+    </script>
 </head>
 
 <style>
